<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8FC"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/layout_bind_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_toolbar"
        android:layout_marginBottom="16.67dp"
        android:layout_marginTop="11.33dp"
        android:background="@drawable/bg_setting_item"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:layout_marginStart="26.33dp"
            android:layout_marginTop="23dp"
            android:text="@string/bind_account"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_bind_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:drawableEnd="@drawable/icon_more_topic"
            android:drawablePadding="10dp"
            android:text="@string/unbinding_mobile_warning"
            android:textColor="#66000000"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_bind_account"
        android:background="@drawable/bg_setting_item"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="19dp"
            android:layout_marginStart="26.33dp"
            android:layout_marginTop="19dp"
            android:text="@string/clear_cache"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:textColor="#66000000" />
    </RelativeLayout>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/layout_push_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_clear_cache"
        android:background="@drawable/bg_setting_item"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.33dp"
            android:layout_marginEnd="13.33dp"
            android:layout_marginStart="13.33dp"
            android:background="#26000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="26.33dp"
            android:layout_marginTop="19dp"
            android:text="@string/msg_remind"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="22dp"
            android:theme="@style/SwitchCompatStyle" />

        <TextView
            android:id="@+id/txt_push_close_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_push"
            android:layout_marginStart="26.33dp"
            android:layout_marginTop="6.67dp"
            android:text="@string/push_off_warning"
            android:textColor="#E14055"
            android:textSize="12sp"
            android:visibility="visible" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_push_switch"
        android:background="@drawable/bg_setting_item"
        android:orientation="horizontal">

        <View
            android:id="@+id/div2"
            android:layout_width="match_parent"
            android:layout_height="0.33dp"
            android:layout_marginEnd="13.33dp"
            android:layout_marginStart="13.33dp"
            android:background="#26000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:layout_marginStart="26.33dp"
            android:layout_marginTop="19dp"
            android:text="@string/about_us"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:drawablePadding="10dp"
            android:src="@drawable/icon_more_topic" />
    </RelativeLayout>


    <TextView
        android:id="@+id/btn_login_exit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66.67dp"
        android:background="@drawable/bg_setting_item"
        android:gravity="center"
        android:text="@string/login_exit"
        android:textColor="#E14055"
        android:textSize="15sp" />
</RelativeLayout>
